<resources>
    <string name="app_name">Vevaio</string>

    <string name="not_installed_description">
        Health Connect is supported on this device, but is not currently installed.
    </string>
    <string name="not_installed_link_text">
        To use Vevaio, and other apps using Health Connect, please install the Health Connect
        package from Google Play.
    </string>
    <string name="not_installed_url">market://details?id=com.google.android.apps.healthdata</string>

    <string name="installed_welcome_message">
        Health Connect is installed on this device. Please request permissions to explore the app.
    </string>

    <string name="not_supported_url">https://developer.android.com/health-connect</string>
    <string name="not_supported_description">
        Health Connect is only supported on Android devices running API level %1$d or above.
    </string>
    <string name="not_supported_link_text">
        Please visit the Health Connect guides to learn more about device compatibility and using
        Health Connect.
    </string>

    <string name="permissions_button_label">Request permissions</string>

    <string name="intro_text">Hi! Let\'s track daily cumulative steps. Use the menu to explore additional actions.</string>
    <string name="permission_rationale">Location data is used as part of the Google Fit API</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="go_back">Go back</string>
    <string name="my_account">My Account</string>
    <string name="settings">Settings</string>
    <string name="tami">Tami</string>
    <string name="my_accountn">My Account</string>
    <string name="personal_info">Personal info</string>
    <string name="general_settings">General settings</string>
    <string name="todo">TODO</string>
    <string name="devices">Devices</string>
    <string name="caregivers">Caregivers</string>
    <string name="sos">SOS</string>
    <string name="language">Language</string>
    <string name="faq">FAQ</string>
    <string name="support">Support</string>
    <string name="change_photo" />
    <string name="photo">photo</string>
    <string name="photo_change">Change photo</string>
    <string name="first_name">* First name</string>
    <string name="name_first">First name</string>
    <string name="last_name">* Last name</string>
    <string name="name_last">Last name</string>
    <string name="birthday">Birthday</string>
    <string name="select_your_birthday">Select your birthday</string>
    <string name="save">Save</string>
    <string name="email_address">Email address</string>
    <string name="your_weight">Your weight</string>
    <string name="email">Email address</string>
    <string name="birthdaydate">Birthday</string>
    <string name="phone_number">Phone number</string>
    <string name="phonenumber">Phone number</string>
    <string name="yourweight">Your weight</string>
    <string name="firstname">First name</string>
    <string name="birthday_date">Birthday date</string>
    <string name="your_height">Your height</string>
    <string name="yourheight">Your height</string>
    <string name="yourHeight">Your height</string>
    <string name="lastname">* Last name</string>
    <string name="lastName">Last name</string>
    <string name="connected_devices">Connected devices</string>
    <string name="forerunner_955_solar">Forerunner� 955 Solar</string>
    <string name="connected">Connected</string>
    <string name="forward_devices_button">forward devices button</string>
    <string name="add_a_new_device">Add a new device</string>
    <string name="your_caregiver_list">Your caregiver list</string>
    <string name="add_a_new_caregivers">Add a new caregivers</string>
    <string name="cancel_caregiver">cancel caregiver</string>
    <string name="doc_trashae_hubbard">Doc. Trashae Hubbard</string>
    <string name="psychiatrist">Psychiatrist</string>
    <string name="_10_indicators_shared">(10 indicators shared)</string>
    <string name="doc_jordanna_kitchener">Doc. Jordanna Kitchener</string>
    <string name="family_doctor">Family doctor</string>
    <string name="_6_indicators_shared">(6 indicators shared)</string>
    <string name="add_a_new_caregiver">Add a new caregiver</string>
    <string name="are_you_in_emergency">ARE YOU IN EMERGENCY?</string>
    <string name="cancel">CANCEL</string>
    <string name="speak">SPEAK</string>
    <string name="close">CLOSE</string>
    <string name="medical_info">MEDICAL INFO</string>
    <string name="lipitor_10mg">Lipitor 10MG</string>
    <string name="doze">Doze</string>
    <string name="take_per_day_pill">Add a new device</string>
    <string name="per_day">Per Day</string>
    <string name="time">Time</string>
    <string name="take_time_doze">Add a new device</string>
    <string name="alert_every_day">Alert every day</string>
    <string name="_1">1</string>
    <string name="minus_button">minus button</string>
    <string name="plus_button">plus button</string>
    <string name="pills">pills</string>
    <string name="plus">plus</string>
    <string name="doze_per_day">doze_per_day</string>
    <string name="minus">minus</string>
    <string name="doze_number">doze_number</string>
    <string name="number">1</string>
    <string name="medical_info_title">MEDICAL INFO</string>
    <string name="lipitor_10mg_medicine">Lipitor 10MG</string>
    <string name="d_vitamin">D Vitamin</string>
    <string name="optalgin">Optalgin</string>
    <string name="log">Log</string>
    <string name="add_new_medicine">Add New Medicine</string>
    <string name="what_would_you_like_to_share_with">What would you like to share with</string>
    <string name="doc_trashae_hubbard_name">Doc. Trashae Hubbard</string>
    <string name="stress">Stress</string>
    <string name="bmi">BMI</string>
    <string name="pa">PA</string>
    <string name="bone_mass">Bone Mass</string>
    <string name="protein">Protein</string>
    <string name="fluids">Fluids</string>
    <string name="water">Water</string>
</resources>