<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true" >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_background"
        android:weightSum="8"
        tools:context=".CaregiversActivity">

        <ImageButton
            android:id="@+id/btn_return"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#00FFFFFF"
            android:contentDescription="@string/go_back"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.013"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@drawable/ic_arrow_back" />

        <ImageButton
            android:id="@+id/btn_caregiver_a"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="60dp"
            android:background="@drawable/button_circle_a"
            android:contentDescription="@string/photo"
            android:src="@drawable/ic_person"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.122"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.006" />

        <TextView
            android:id="@+id/tv_doctor_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="sans-serif"
            android:text="@string/doc_trashae_hubbard"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/btn_caregiver_a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_caregiver_a"
            app:layout_constraintTop_toTopOf="@+id/btn_caregiver_a"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_doctor_type_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:text="@string/psychiatrist"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toBottomOf="@+id/btn_caregiver_a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_caregiver_a"
            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_a"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_indicators_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:text="@string/_10_indicators_shared"
            android:textColor="#FFFFFF"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/btn_caregiver_a"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/btn_caregiver_a"
            app:layout_constraintTop_toBottomOf="@+id/tv_doctor_type_a"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_what_to_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:fontFamily="sans-serif"
            android:text="@string/what_would_you_like_to_share_with"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_caregiver_a"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/tv_doc_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="2dp"
            android:fontFamily="sans-serif"
            android:text="@string/doc_trashae_hubbard_name"
            android:textColor="#FFFFFF"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_what_to_share"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/sw_stress"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/button_rectangle_switch"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/stress"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:thumbTint="#FFFFFF"
            android:trackTint="#8BC34A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_doc_share"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/sw_bmi"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rectangle_switch"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/bmi"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:thumbTint="#FFFFFF"
            android:trackTint="#8BC34A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_stress"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/sw_pa"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rectangle_switch"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/pa"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:thumbTint="#FFFFFF"
            android:trackTint="#8BC34A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_bmi"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/sw_bone_mass"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rectangle_switch"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/bone_mass"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:thumbTint="#FFFFFF"
            android:trackTint="#8BC34A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_pa"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/sw_protein"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rectangle_switch"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/protein"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:thumbTint="#FFFFFF"
            android:trackTint="#8BC34A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_bone_mass"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/sw_fluids"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rectangle_switch"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/fluids"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:thumbTint="#FFFFFF"
            android:trackTint="#8BC34A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_protein"
            app:layout_constraintVertical_bias="0.0" />

        <Switch
            android:id="@+id/sw_water"
            android:layout_width="335dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/button_rectangle_switch"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/water"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:thumbTint="#FFFFFF"
            android:trackTint="#8BC34A"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_fluids"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btn_save"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:background="@drawable/button_rectangle"
            android:text="@string/save"
            android:textAppearance="@style/TextDescriptionStyle"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sw_water"
            app:layout_constraintVertical_bias="1.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>